# OBS_FC

./: .gitignore  CDR.md  CMakeLists.txt  Doxyfile  README.md  build.sh
.github/workflows/: cmake-check.yml  doxygen-pages.yml
src/: CMakeLists.txt  main.c
src/app/: state.h  state_machine.c  state_machine.h
src/app/states/: init_state.c  init_state.h  standby_state.c  standby_state.h
src/devices/: actuator.c  actuator.h  barometer.c  barometer.h  gnss.h  imu.h  radio.c  radio.h  temp_sensor.h
src/internal/: alloc.c  interrupt.c  interrupt.h  mmio.c  mmio.h  startup.c  systick.c  vtable.c
src/peripheral/: actuator.c  actuator.h  dma.h  errc.h  gpio.c  gpio.h  imu.h  mutex.h  old_spi.c  old_spi.h  qspi.c  qspi.h  radio.c  radio.h  spi.c  spi.h  systick.c  systick.h  thread.h  uart.c  uart.h  watchdog.c  watchdog.h
src/util/: error.h
test/: test_alloc.c  test_oscilloscope.c  test_pwm.c  test_spi.c  test_usart.c
